Gave up on self hosting, providing image link instead

--- a/client/index.scss
+++ b/client/index.scss
@@ -2,6 +2,9 @@
 .profile {
   width: 10rem;
 }
+#login-buttons{
+  margin-top: 100px;
+}
 .flipped{
   transform:rotate(180deg);
   -ms-transform:rotate(180deg);
