Fixed small bugs, image loading, blog date

--- a/client/index.scss
+++ b/client/index.scss
@@ -14,6 +14,9 @@
   width: 100%;
 
 }
+.tags{
+  width: 100%;
+}
 .blogTitle{
   margin-bottom: 30px;
   display: inline-block;
@@ -22,6 +25,7 @@
   font-size: 16px !important;
   text-align: left;
   margin-left: 80px;
+  width: 100%;
 }
 #blogImg{
   float: left;
